# CortexM0_bare_metal_cmake

./: .gitignore  CMakeLists.txt  README.asciidoc  README.md
cmake/: check_for_variables.cmake  generate-binary-file.cmake  generate-different-output-format.cmake  global_properties.cmake  protothread_cpp.cmake
cmake/processor/: ATSAMD21G18.cmake  LPC11U35.cmake  SAMD21G18A.cmake  XMC-1100.cmake
cmake/toolchain/: clang-arm-toolchain.cmake  gcc-arm-toolchain.cmake
include/: cstddef
lib/: stm32f031x6_clang.ld
lib/linker/: LPC11U35.ld  SAMD21G18A.ld  XMC-1100.ld  cortexM0_plus.ld  lpc11u35_clang.ld
linker/: LPC11U35.ld  LPC11U35_CLANG.ld  SAMD21G18A.ld  XMC-1100.ld  cortexM0_plus.ld
linker/old/: gcc_stm32f0xx.ld.txt
src/: main.cpp
src/Processor/LPC11U35/: handlers.cpp  stack.cpp  startup.cpp
src/blinky/: CMakeLists.txt  main.cpp
src/processor_hal/: CMakeLists.txt  reg_access_dynamic.h  reg_access_static.h
src/startup/: CMakeLists.txt  crt0.cpp  crt0_init.cpp  crt0_init_ram.cpp  crt1.cpp  int_vect.cpp  interrupt_handler.cpp  interrupt_vector.cpp  startup.cpp  tiny_new.cpp
src/startup/archive/: startup.cpp
src/util/: CMakeLists.txt  communication_base.h  communication_buffer_depth_one_byte.h  noncopyable.h  port_pin.h  reg_access_dynamic.h  reg_access_static.h  spi.cpp  spi.h
tests/: CMakeLists.txt
tools/: Dockerfile  createBuildEnv.sh  setEnv.sh
